Ajustes em members
