# app/controllers/api/v1/profile_members_controller.rb
@@ -63,9 +63,10 @@ module Api
           .permit(:name, :cell_phone, :phone, :birth, :cpf, :rg, :gender, :marital_status, :pis, :expedition,
                   :mother_name, :father_name, :municipal_registration, :city_registration,
                   academic_educationals_attributes: %i[id degree course number_register],
-                  addresses_attributes: %i[id street number neighborhood city uf mailing email_mailing],
-                  bank_accounts_attributes: %i[id account agency bank account_type pix],
-                  dependents_attributes: %i[id name birth])
+                  address_attributes: %i[id street number neighborhood city uf mailing email_mailing],
+                  bank_account_attributes: %i[id account agency bank account_type pix],
+                  dependents_attributes: %i[id name birth],
+                  member_attributes: %i[id email password])
       end
     end
   end
